packages/svelte/tests/validator/samples/state-referenced-locally-props-identifier/input.svelte
<script>
	const props = $props();
	const { model } = props;
	const value = props.model.value;
	console.log(model, value);
</script>
