packages/svelte/tests/compiler-errors/samples/runes-wrong-bindable-args/main.svelte
<script>
	const { foo = $bindable(1, 2) } = $props();
</script>
